--- a/TheAchEcom/Views/Product/ProductDetail.cshtml
+++ b/TheAchEcom/Views/Product/ProductDetail.cshtml
@@ -120,7 +120,7 @@
 
 </div>
 
-<h3 class="title"> Reviews </h3>
+@*<h3 class="title"> Reviews </h3>
 <div class="line_separator"></div>
 
 <div class="product_review">
@@ -255,7 +255,7 @@
          </form>
       </div>
    </div>
-</div>
+</div>*@
 
 <h3 class="title"> More @brand.BrandName's products </h3>
 <div class="line_separator"></div>
