--- a/TheAchEcom/Views/Shop/ShopList.cshtml
+++ b/TheAchEcom/Views/Shop/ShopList.cshtml
@@ -179,6 +179,43 @@
             </span>
          }
       </fieldset>
+
+      <div style="background: white; margin-right: 60px; border: 1px solid #c5c5c5;">
+         <!-- FB -->
+         <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fpkdt2020&tabs=timeline&width=280&height=120&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1166647650387865" width="280" height="120" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+         <!--end FB-->
+         <!-- Begin Mailchimp Signup Form -->
+         <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+         <style type="text/css">
+            #mc_embed_signup {
+               background: #fff;
+               clear: left;
+               font: 14px Helvetica,Arial,sans-serif;
+            }
+            /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+                        We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+         </style>
+         <div id="mc_embed_signup">
+            <form action="https://phukiendienthoai.us2.list-manage.com/subscribe/post?u=415c7f463f7544d68b7dcb3c1&amp;id=7f20563f13" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+               <div id="mc_embed_signup_scroll">
+                  <h2>Đăng kí nhận thông báo</h2>
+                  <div class="mc-field-group">
+                     <label for="mce-EMAIL">Địa chỉ email</label>
+                     <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                  </div>
+                  <div id="mce-responses" class="clear">
+                     <div class="response" id="mce-error-response" style="display:none"></div>
+                     <div class="response" id="mce-success-response" style="display:none"></div>
+                  </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_415c7f463f7544d68b7dcb3c1_7f20563f13" tabindex="-1" value=""></div>
+                  <div class="clear"><input type="submit" value="Subscribe" name="Đăng kí" id="mc-embedded-subscribe" class="button"></div>
+               </div>
+            </form>
+         </div>
+         <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+         <script type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+         <!--End mc_embed_signup-->
+      </div>
    </div>
 
    <div class="bottom_right_section">
