--- a/TheAchEcom/Views/Shop/ShopList.cshtml
+++ b/TheAchEcom/Views/Shop/ShopList.cshtml
@@ -180,7 +180,7 @@
          }
       </fieldset>
 
-      <div style="background: white; margin-right: 60px; border: 1px solid #c5c5c5;">
+      <div style="margin-top:2rem;background: white; margin-right: 60px; border: 1px solid #c5c5c5;">
          <!-- FB -->
          <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fpkdt2020&tabs=timeline&width=280&height=120&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1166647650387865" width="280" height="120" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
          <!--end FB-->
