--- a/TheAchEcom/Views/Product/ProductDetail.cshtml
+++ b/TheAchEcom/Views/Product/ProductDetail.cshtml
@@ -57,11 +57,8 @@
 <div class="product_detail_section">
    <div class="product_images">
       <div class="images">
-         <img class="image" src="" alt="">
-         <img class="image" src="" alt="">
-         <img class="image" src="" alt="">
       </div>
-      <img class="primary_image" src="" alt="">
+      <img class="primary_image" src="@product.ImageUrl" alt="">
    </div>
 
    <div class="product_detail">
